# beevibe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
beevibe/: __init__.py
beevibe/ai/: openai_interface.py
beevibe/core/: datasets.py  earlystopping.py  models.py  schedulers.py  tokenizers.py  trainer.py
beevibe/utils/: huggingface.py  logger.py  validator.py
dataset/elegana/: README.md  elegana_test_v0_1.csv  elegana_themes_v0_1.csv  elegana_train_v0_1.csv
examples/: binary_tutorial.ipynb  config.json  mef_camembert_multiclass.ipynb  multiclass_tutorial.ipynb  multilabel_tutorial.ipynb  test_config.json
tests/: pytest.ini  test_trainer.ipynb  test_trainer.py
