[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "tomli"
]
build-backend = "setuptools.build_meta"

[project]
name = "beevibe"
version = "0.1.0"
description = "A Python package for training and inference of language models on thematic datasets."
authors = [
    { name = "BeeVibe Authors" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10.12"

[project.dependencies]
pandas = ">=2.2.2"
numpy = ">=1.26.4"
scipy = ">=1.13.1"
scikit-learn = ">=1.6.0"
torch = ">=2.5.1"
transformers = ">=4.47.0"
tokenizers = ">=0.21.0"
datasets = ">=3.2.0"
seaborn = ">=0.11.0"
matplotlib = ">=3.3.0"
pydantic = ">=1.10.0"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]

[project.optional-dependencies]
development = [
    "pytest",
    "ruff",
    "black"
]

target-version = "py310"
