[project]
name = "beevibe"
version = "0.1.0.dev8"
description = "A lightweight framework for training and deploying language models for thematic text classification."
authors = [
    { name = "François Bullier" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10.12"

dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
    "bitsandbytes>=0.39.0",
    "transformers[sentencepiece]>=4.47.0,<5.0.0",
    "tokenizers>=0.21.0",
    "peft",
    "safetensors",
    "datasets",
    "seaborn",
    "matplotlib",
    "pydantic",
    "openai",
    "joblib"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]